--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/1.1.0/normalize.min.css"
-    />
   </head>
   <body>
     <header>
@@ -24,7 +22,7 @@
           <a href="./index.html" class="logo link"
             >Web<span class="logo-studio link">Studio</span></a
           >
-          <ul class="header-list">
+          <ul class="header-list list">
             <li class="header-item list">
               <a href="./index.html" class="header-link link current">Студія</a>
             </li>
@@ -108,7 +106,7 @@
           </ul>
         </div>
       </section>
-      <section class="team-block">
+      <section class="team-block section">
         <div class="container container-team">
           <h2 class="team-block-title">Наша команда</h2>
           <ul class="team-block-list list">
