--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </section>
       <section class="hero">
-        <div class="container hero-container">
+        <div class="container">
           <h2 class="visually-hidden">Наші особливості</h2>
           <ul class="hero-list list">
             <li class="hero-item list">
@@ -116,8 +116,10 @@
                 alt="Ігор Дем'яненко"
                 width="270"
               />
+              <div class="about-team">
               <h3 class="team-item">Ігор Дем'яненко</h3>
               <p lang="en" class="team-post">Product Designer</p>
+              </div>
             </li>
             <li class="team-block-item">
               <img
@@ -125,8 +127,10 @@
                 alt="Ольга Рєпіна"
                 width="270"
               />
+              <div class="about-team">
               <h3 class="team-item">Ольга Рєпіна</h3>
               <p lang="en" class="team-post">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-block-item">
               <img
@@ -134,8 +138,10 @@
                 alt="Микола Тарасов"
                 width="270"
               />
+              <div class="about-team">
               <h3 class="team-item">Микола Тарасов</h3>
               <p lang="en" class="team-post">Marketing</p>
+              </div>
             </li>
             <li class="team-block-item">
               <img
@@ -143,21 +149,23 @@
                 alt="Михайло Єрмаков"
                 width="270"
               />
+              <div class="about-team">
               <h3 class="team-item">Михайло Єрмаков</h3>
               <p lang="en" class="team-post">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer-container">
-        <a href="./index.html" class="footer-logo link"
+      <div class="container">
+        <a href="./index.html" class="footer-container link"
           >Web<span class="footer-logo-studio link">Studio</span></a
         >
         <address class="footer-contact">
           <ul class="footer-contact-list list">
-            <li class="footer-address">
+            <li class="footer-item">
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                 target="_blank"
@@ -166,12 +174,12 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li class="footer-mail">
+            <li class="footer-item">
               <a href="mailto:info@devstudio.com" class="footer-mail-link link"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="footer-tel">
+            <li class="footer-item">
               <a href="tel:+380961111111" class="footer-tel-link link"
                 >+38 096 111 11 11</a
               >
